# Packit

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md
include/: pakit.h
python/: pakit.py
sample/: packit_sample.c
src/: pakit.c
test/: pakit_test.c
